--- a/1.html
+++ b/1.html
@@ -14,6 +14,12 @@
 
 
   <h2>HTML</h2>
+  <p>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/L15ZZX9n56M"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+  </p>
   <p><a href = "https://www.w3.org/TR/html5/"
   target = "_blank" title = "html5 specification">
   Hypertext Markup Language (HTML)</a> is the standard markup language <strong>for creating
@@ -42,8 +48,31 @@
   <br>If you want to write korean word correctly in server
   = use meta charset = "utf-8"
   <br>If you want to make link&make new window&notice what link
-  = use a href = "link account"&use target = "_blank"&title = "title name"</p>
+  = use a href = "link account"&use target = "_blank"&title = "title name"
   <br>If you browse your website
   = you write "C:\Users\User\Desktop\web\1.html" : your project name
+  </p>
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-chosungsu-github-io-web1.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
 </body>
 </html>
