--- a/1.html
+++ b/1.html
@@ -35,27 +35,26 @@
   for text such as headings, paragraphs, lists, links, quotes and other items.
   HTML elements are delineated by tags, written using angle brackets.</p>
   <p>If you click ctrl + 'o' you can make your webpage
-  <br>If you write strong = word thickly
-  <br>If you write u = word underlined
-  <br>If you write h1/h2/h3/h4 = word size controlled
-  <br>If you write br or p= word new line
-  <br>If you write style ="margin-top/down/right/left" is a CSS skill.
-  <br>If you write same tag = press the 'ctrl' key
-  <br>If you write list(li) tag & (ul) tag
+  If you write strong = word thickly
+  If you write u = word underlined
+  If you write h1/h2/h3/h4 = word size controlled
+  If you write br or p= word new line
+  If you write style ="margin-top/down/right/left" is a CSS skill.
+  If you write same tag = press the 'ctrl' key
+  If you write list(li) tag & (ul) tag
   = list word & parent tag for li tag to unordered list
-  <br>If you write ol tag
+  If you write ol tag
   = automatically attach number to ordered list
-  <br>If you want to write korean word correctly in server
+  If you want to write korean word correctly in server
   = use meta charset = "utf-8"
-  <br>If you want to make link&make new window&notice what link
+  If you want to make link&make new window&notice what link
   = use a href = "link account"&use target = "_blank"&title = "title name"
-  <br>If you browse your website
+  If you browse your website
   = you write "C:\Users\User\Desktop\web\1.html" : your project name
   </p>
   <p>
     <div id="disqus_thread"></div>
     <script>
-
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
@@ -72,7 +71,10 @@
     (d.head || d.body).appendChild(s);
     })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <noscript>Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.
+      </a>
+    </noscript>
   </p>
 </body>
 </html>
